--- a/Innovate_Feedback/app/build.gradle
+++ b/Innovate_Feedback/app/build.gradle
@@ -49,6 +49,8 @@ android {
         dataBinding true
     }
 }
+// HTTPS://docs.gradle.org/current/userguide/jacoco_plugin.html
+
 dependencies {
 // Core
     implementation 'androidx.core:core-ktx:1.7.0'
@@ -57,19 +59,9 @@ dependencies {
     // Android x Layout
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
+    implementation "androidx.fragment:fragment-ktx:1.4.0"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.compose.ui:ui:1.1.0'
-    implementation 'androidx.compose.foundation:foundation:1.1.0'
-    implementation 'androidx.compose.runtime:runtime:1.1.0'
-    implementation 'androidx.compose.runtime:runtime-saveable:1.1.0'
-    implementation 'androidx.compose.compiler:compiler:1.1.0'
-    implementation 'androidx.compose.ui:ui-tooling:1.1.0'
-    implementation 'androidx.compose.material:material:1.1.0'
-    implementation 'androidx.compose.material:material-icons-core:1.1.0'
-    implementation 'androidx.compose.ui:ui-graphics:1.1.0@aar'
-    implementation 'androidx.fragment:fragment-ktx:1.5.1'
-
 
     // DESUGARING
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
@@ -78,7 +70,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
 
     // Material Design
-    implementation "com.google.android.material:material:1.6.1"
+    implementation "com.google.android.material:material:1.4.0"
 
     // Navigation
     implementation "androidx.navigation:navigation-fragment-ktx:$version_navigation"
@@ -91,8 +83,11 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
 
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0")
+
+
 }
