--- a/Innovate_Feedback/settings.gradle
+++ b/Innovate_Feedback/settings.gradle
@@ -5,5 +5,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "Nudennie_White_BoilerPlate"
+rootProject.name = "Pilot Feedback"
 include ':app'
