--- a/Innovate_Feedback/app/build.gradle
+++ b/Innovate_Feedback/app/build.gradle
@@ -5,13 +5,15 @@ plugins {
     id 'androidx.navigation.safeargs'
     id 'org.jlleitschuh.gradle.ktlint'
     id "io.gitlab.arturbosch.detekt" version "1.19.0"
+    id 'org.jetbrains.kotlin.plugin.serialization' version '1.4.10'
+
 }
 
 android {
     compileSdk 31
 
     defaultConfig {
-        applicationId "com.tc2r1.android.nudennie_white_boilerplate"
+        applicationId "com.tc2r1.innovate.pilotfeedback"
         minSdk 21
         targetSdk 31
         versionCode 1
@@ -82,12 +84,17 @@ dependencies {
     // Retrofit2
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.2.0"
 
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0")
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.jakewharton.picasso:picasso2-okhttp3-downloader:1.1.0'
+    implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2")
 
 
 }
